8136524: aarch64: test/compiler/runtime/7196199/Test7196199.java fails

Fix safepoint handlers to save 128 bits on vector poll

Reviewed-by: kvn